almost done w detecting words in reviews

--- a/menu_filter.ipynb
+++ b/menu_filter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -25,18 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "menu = ['Fried Rice with Shrimp Dinner', 'Portobello Mushroom Jae Dinner', 'Goong Prik King Dinner', 'Vegetable Rolls', 'Por Tod', 'BKK Rolls', 'Summer Rolls', 'Satay', 'Tod Mon', 'BKK Dumplings', 'Yum Talay', 'Pla Goong', 'Peek Gai', 'Goong Bikini', 'Crispy Squid', 'Larb', 'Yum Nua', 'Num Tok', 'Papaya Salad', 'Tom Yum with Shrimps', 'Tom Yum with Vegetables', 'Tom Kha with Chicken', 'Tom Kha with Vegetables', 'Poe Tak', 'Tofu Soup', 'Goong Portobello Mushroom Dinner', 'Goong Portobello Mushroom Lunch', 'Volcano Seafood Dinner', 'Volcano Seafood Lunch', 'Nua Kata Dinner', 'Nua Kata Lunch', 'Talay Pow Dinner', 'Talay Pow Lunch', 'Red Curry Shrimp Dinner', 'Red Curry Shrimp Lunch', 'Nam Prik Ong Dinner', 'Nam Prik Ong Lunch', 'Goong Ka Tiem Dinner', 'Goong Ka Tiem Lunch', 'Goong Prik King Lunch', 'Talay Eggplant Dinner', 'Talay Eggplant Lunch', 'Talay Combo Dinner', 'Talay Combo Lunch', 'Goong Pad Pak Dinner', 'Goong Pad Pak Lunch', 'Panang Goong Dinner', 'Panang Goong Lunch', 'Goong Prik Prow Dinner', 'Goong Prik Prow Lunch', 'Ped Ka Prow Dinner', 'Ped Ka Prow Lunch', 'Gang Ped Yarng Dinner', 'Gang Ped Yarng Lunch', 'Ginger Rice Dinner', 'Ginger Rice Lunch', 'Bangkok Green Fried Rice Dinner', 'Bangkok Green Fried Rice Lunch', 'Roasted Duck on Rice Dinner', 'Roasted Duck on Rice Lunch', 'Fried Rice Dinner', 'Fried Rice Lunch', 'Fried Rice with Shrimp Lunch', 'Seafood Fried Rice Dinner', 'Seafood Fried Rice Lunch', 'Gai Prik Prow Dinner', 'Gai Prik Prow Lunch', 'Pa Ram Rong Srong Dinner', 'Pa Ram Rong Srong Lunch', 'Pad King Dinner', 'Pad King Lunch', 'Gai Siam Dinner', 'Gai Siam Lunch', 'Gai Him Ma Pan Dinner', 'Gai Him Ma Pan Lunch', 'Panang Gai Dinner', 'Panang Gai Lunch', 'Spiced Duck in Noodles Soup Dinner', 'Spiced Duck in Noodles Soup Lunch', 'Kaprow Dinner', 'Kaprow Lunch', 'Gai Eggplants Dinner', 'Gai Eggplants Lunch', 'Ka Tiem Dinner', 'Ka Tiem Lunch', 'Pad Prik King Dinner', 'Pad Prik King Lunch', 'Green Curry Chicken Dinner', 'Green Curry Chicken Lunch', 'Pad Thai Dinner', 'Pad Thai Lunch', 'Curry Noodles Dinner', 'Curry Noodles Lunch', 'Pad See-U Dinner', 'Pad See-U Lunch', 'Siam Noodles Dinner', 'Siam Noodles Lunch', 'Drunken Noodles Dinner', 'Drunken Noodles Lunch', 'Lad Na Dinner', 'Lad Na Lunch', 'Pad Thai Pak Dinner', 'Pad Thai Pak Lunch', 'Pad See-U Pak Dinner', 'Pad See-U Pak Lunch', 'Pa Ram Jae Dinner', 'Pa Ram Jae Lunch', 'Pad Eggplants Dinner', 'Pad Eggplants Lunch', 'Pad Pak Dinner', 'Pad Pak Lunch', 'Steam Garden Dinner', 'Steam Garden Lunch', 'Sweet and Sour Vegetables Dinner', 'Sweet and Sour Vegetables Lunch', 'Vegetable Fried Rice Dinner', 'Vegetable Fried Rice Lunch', 'Portobello Mushroom Jae Lunch', 'Lad Na Pak Dinner', 'Lad Na Pak Lunch', 'Drunken Noodles Pak Dinner', 'Drunken Noodles Pak Lunch', 'Kaprow Jae Dinner', 'Kaprow Jae Lunch', 'Panang Pak Dinner', 'Panang Pak Lunch', 'Gang Pak Dinner', 'Gang Pak Lunch', 'BKK Tofu Dinner', 'BKK Tofu Lunch', 'Sweet Sticky Rice with Mango', 'Coconut Custard with Taro Root', 'Palm Cake', 'Sticky Rice with Banana', 'Coconut Ice-Cream', 'Thai Iced Coffee', 'Grilled Chicken Salad', 'House Salad', 'Thai Iced Tea']"
+    "menu = ['Fried Rice with Shrimp Dinner', 'Portobello Mushroom Jae Dinner', 'Goong Prik King Dinner', 'Vegetable Rolls', 'Por Tod', 'BKK Rolls', 'Summer Rolls', 'Satay', 'Tod Mon', 'BKK Dumplings', 'Yum Talay', 'Pla Goong', 'Peek Gai', 'Goong Bikini', 'Crispy Squid', 'Larb', 'Yum Nua', 'Num Tok', 'Papaya Salad', 'Tom Yum with Shrimps', 'Tom Yum with Vegetables', 'Tom Kha with Chicken', 'Tom Kha with Vegetables', 'Poe Tak', 'Tofu Soup', 'Goong Portobello Mushroom Dinner', 'Goong Portobello Mushroom Lunch', 'Volcano Seafood Dinner', 'Volcano Seafood Lunch', 'Nua Kata Dinner', 'Nua Kata Lunch', 'Talay Pow Dinner', 'Talay Pow Lunch', 'Red Curry Shrimp Dinner', 'Red Curry Shrimp Lunch', 'Nam Prik Ong Dinner', 'Nam Prik Ong Lunch', 'Goong Ka Tiem Dinner', 'Goong Ka Tiem Lunch', 'Goong Prik King Lunch', 'Talay Eggplant Dinner', 'Talay Eggplant Lunch', 'Talay Combo Dinner', 'Talay Combo Lunch', 'Goong Pad Pak Dinner', 'Goong Pad Pak Lunch', 'Panang Goong Dinner', 'Panang Goong Lunch', 'Goong Prik Prow Dinner', 'Goong Prik Prow Lunch', 'Ped Ka Prow Dinner', 'Ped Ka Prow Lunch', 'Gang Ped Yarng Dinner', 'Gang Ped Yarng Lunch', 'Ginger Rice Dinner', 'Ginger Rice Lunch', 'Bangkok Green Fried Rice Dinner', 'Bangkok Green Fried Rice Lunch', 'Roasted Duck on Rice Dinner', 'Roasted Duck on Rice Lunch', 'Fried Rice Dinner', 'Fried Rice Lunch', 'Fried Rice with Shrimp Lunch', 'Seafood Fried Rice Dinner', 'Seafood Fried Rice Lunch', 'Gai Prik Prow Dinner', 'Gai Prik Prow Lunch', 'Pa Ram Rong Srong Dinner', 'Pa Ram Rong Srong Lunch', 'Pad King Dinner', 'Pad King Lunch', 'Gai Siam Dinner', 'Gai Siam Lunch', 'Gai Him Ma Pan Dinner', 'Gai Him Ma Pan Lunch', 'Panang Gai Dinner', 'Panang Gai Lunch', 'Spiced Duck in Noodles Soup Dinner', 'Spiced Duck in Noodles Soup Lunch', 'Kaprow Dinner', 'Kaprow Lunch', 'Gai Eggplants Dinner', 'Gai Eggplants Lunch', 'Ka Tiem Dinner', 'Ka Tiem Lunch', 'Pad Prik King Dinner', 'Pad Prik King Lunch', 'Green Curry Chicken Dinner', 'Green Curry Chicken Lunch', 'Pad Thai Dinner', 'Pad Thai Lunch', 'Curry Noodles Dinner', 'Curry Noodles Lunch', 'Pad See-U Dinner', 'Pad See-U Lunch', 'Siam Noodles Dinner', 'Siam Noodles Lunch', 'Drunken Noodles Dinner', 'Drunken Noodles Lunch', 'Lad Na Dinner', 'Lad Na Lunch', 'Pad Thai Pak Dinner', 'Pad Thai Pak Lunch', 'Pad See-U Pak Dinner', 'Pad See-U Pak Lunch', 'Pa Ram Jae Dinner', 'Pa Ram Jae Lunch', 'Pad Eggplants Dinner', 'Pad Eggplants Lunch', 'Pad Pak Dinner', 'Pad Pak Lunch', 'Steam Garden Dinner', 'Steam Garden Lunch', 'Sweet and Sour Vegetables Dinner', 'Sweet and Sour Vegetables Lunch', 'Vegetable Fried Rice Dinner', 'Vegetable Fried Rice Lunch', 'Portobello Mushroom Jae Lunch', 'Lad Na Pak Dinner', 'Lad Na Pak Lunch', 'Drunken Noodles Pak Dinner', 'Drunken Noodles Pak Lunch', 'Kaprow Jae Dinner', 'Kaprow Jae Lunch', 'Panang Pak Dinner', 'Panang Pak Lunch', 'Gang Pak Dinner', 'Gang Pak Lunch', 'BKK Tofu Dinner', 'BKK Tofu Lunch', 'Sweet Sticky Rice with Mango', 'Coconut Custard with Taro Root', 'Palm Cake', 'Sticky Rice with Banana', 'Coconut Ice-Cream', 'Thai Iced Coffee', 'Grilled Chicken Salad', 'House Salad', 'Thai Iced Tea']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -90,8 +90,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 106 ms, sys: 12.3 ms, total: 118 ms\n",
-      "Wall time: 165 ms\n"
+      "CPU times: user 91.8 ms, sys: 8.57 ms, total: 100 ms\n",
+      "Wall time: 104 ms\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -210,7 +210,7 @@
        " 'Thai Iced Tea']"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -315,7 +315,7 @@
        " 'iced tea']"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -688,7 +688,7 @@
        " 'yum vegetable': 'Tom Yum with Vegetables'}"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,30 +700,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tom Yum with Vegetables\n"
+     "ename": "NameError",
+     "evalue": "name 'mike' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-299576a3330f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mhit_word\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mword_to_menu\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mhit_word\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmike\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword_to_menu\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mhit_word\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mike' is not defined"
      ]
     }
    ],
    "source": [
     "for hit_word in word_to_menu.keys():\n",
     "    if hit_word in mike:\n",
-    "        print(word_to_menu[hit_word])\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "        print(word_to_menu[hit_word])"
    ]
   },
   {
